# kernel_compiler

./: .gitignore  CMakeLists.txt  README.md  run-tests.sh
codegen/: __init__.py  compile.py  grammar.lark  optim.py  parser.py  transforms.py  workgroup_partitioning.py
codegen/ast/: expression.py  program.py  statement.py  type.py
codegen/kast/: __init__.py  ast_node.py  expression.py  program.py  statement.py  type.py  workgroup.py
codegen/visitors/: pattern_match_visitor.py  pretty_printer.py  resolve_array_indices.py  rllm_vulkan_dispatch_stub_visitor.py  tree_rewriter.py  visitor.py  vulkan_cpp_stub_visitor.py  vulkan_kernel_visitor.py
runtime/: CMakeLists.txt
runtime/include/: logging.hpp  test_vulkan_helpers.h  vbuffer.hpp  vulkan_session.hpp
runtime/src/: vulkan_session.cc
testdata/: _type_aliases.hpp  dynamic-atb-acc-perf.kernel  dynamic-atb-acc.kernel  multi-arg.glsl  multi-arg.kernel  offload_parfor_InputLayer_23.cc.kernel  offload_parfor_InputLayer_23.kernel  offload_parfor_InputLayer_25.kernel  offload_parfor_NeuralNetwork_80.cc.kernel  offload_parfor_NeuralNetwork_80.kernel  offload_parfor_NeuralNetwork_81.kernel  offload_parfor_OutputLayer_105.kernel  offload_parfor_OutputLayer_108.kernel  offload_parfor_OutputLayer_118.cc.kernel  offload_parfor_OutputLayer_120.kernel  offload_parfor_OutputLayer_124.kernel  offload_parfor_OutputLayer_135.cc.kernel  offload_parfor_OutputLayer_138.kernel  offload_parfor_OutputLayer_139.cc.kernel  offload_parfor_OutputLayer_143.kernel  offload_parfor_OutputLayer_153.cc.kernel  offload_parfor_OutputLayer_157.kernel  offload_parfor_OutputLayer_171.cc.kernel  offload_parfor_OutputLayer_172.cc.kernel  offload_parfor_OutputLayer_205.cc.kernel  offload_parfor_OutputLayer_42.kernel  offload_parfor_OutputLayer_43.kernel  offload_parfor_OutputLayer_59.kernel  offload_parfor_OutputLayer_60.cc.kernel  offload_parfor_OutputLayer_71.kernel  offload_parfor_OutputLayer_76.cc.kernel  offload_parfor_OutputLayer_78.kernel  offload_parfor_OutputLayer_90.kernel  offload_parfor_OutputLayer_93.kernel  offload_parfor_OutputLayer_95.cc.kernel  offload_parfor_TransformerBlock_102.cc.kernel  offload_parfor_TransformerBlock_125.cc.kernel  offload_parfor_TransformerBlock_131.cc.kernel  offload_parfor_TransformerBlock_136.cc.kernel  offload_parfor_TransformerBlock_137.kernel  (+137 more)
tests/: CMakeLists.txt  gen_parfor_dump.py  generate_pytest_files.py  test_codegen.py  test_codegen_vulkan_stubs.py  test_offload_parfor_InputLayer_23_cc.py  test_offload_parfor_NeuralNetwork_80_cc.py  test_offload_parfor_NeuralNetwork_81_cc.py  test_offload_parfor_OutputLayer_105_cc.py  test_offload_parfor_OutputLayer_118_cc.py  test_offload_parfor_OutputLayer_120_cc.py  test_offload_parfor_OutputLayer_135_cc.py  test_offload_parfor_OutputLayer_138_cc.py  test_offload_parfor_OutputLayer_153_cc.py  test_offload_parfor_OutputLayer_157_cc.py  test_offload_parfor_OutputLayer_172_cc.py  test_offload_parfor_OutputLayer_42_cc.py  test_offload_parfor_OutputLayer_60_cc.py  test_offload_parfor_OutputLayer_71_cc.py  test_offload_parfor_OutputLayer_76_cc.py  test_offload_parfor_OutputLayer_90_cc.py  test_offload_parfor_OutputLayer_95_cc.py  test_offload_parfor_TransformerBlock_131_cc.py  test_offload_parfor_TransformerBlock_137_cc.py  test_offload_parfor_TransformerBlock_167_cc.py  test_offload_parfor_TransformerBlock_175_cc.py  test_offload_parfor_TransformerBlock_190_cc.py  test_offload_parfor_TransformerBlock_207_cc.py  test_offload_parfor_TransformerBlock_227_cc.py  test_offload_parfor_TransformerBlock_245_cc.py  test_offload_parfor_TransformerBlock_252_cc.py  test_offload_parfor_TransformerBlock_275_cc.py  test_offload_parfor_TransformerBlock_286_cc.py  test_offload_parfor_TransformerBlock_358_cc.py  test_offload_parfor_TransformerBlock_359_cc.py  test_offload_parfor_TransformerBlock_382_cc.py  test_offload_parfor_TransformerBlock_395_cc.py  test_offload_parfor_TransformerBlock_405_cc.py  test_offload_parfor_TransformerBlock_431_cc.py  test_offload_parfor_TransformerBlock_432_cc.py  (+34 more)
transforms/: clean-vecmath296.tkernel  clean_TransformerBlock137.tkernel  clean_TransformerBlock175.tkernel  clean_TransformerBlock245.tkernel  clean_TransformerBlock275.tkernel  clean_TransformerBlock358.tkernel  clean_TransformerBlock431.tkernel  clean_TransformerBlock479.tkernel  clean_TransformerBlock503.tkernel  clean_vecmath40.tkernel  clean_vecmath66.tkernel  clean_vecmath92.tkernel  coop_mat2_multi_arg.tkernel  multi_arg.tkernel  optimize_TransformerBlock207.tkernel  optimize_TransformerBlock395.tkernel  optimize_TransformerBlock67.tkernel  optimize_TransformerBlock95.tkernel  optimize_vecmath225.tkernel  optimize_vecmath266.tkernel  optimize_vecmath296.tkernel  optimize_vecmath319.tkernel  optimize_vecmath342.tkernel  optimize_vecmath388.tkernel  optimize_vecmath415.tkernel  optimize_vecmath449.tkernel  optimize_vecmath474.tkernel  optimize_vecmath531.tkernel  step2_guard.tkernel  step3_chunked_loop.tkernel  step3_chunked_var_size_loop.tkernel  step4_chunked_var_size_reduction_loop.tkernel  transform1.tkernel  workgroup_reduction.tkernel
